--- a/index.html
+++ b/index.html
@@ -1,19 +1,60 @@
 <!DOCTYPE html>
 <html lang="en">
-
    <head>
-      <meta charset="UTF-8" />
-      <title>FxRetailer</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>My Resume</title>
    </head>
-
-    <body>
-    <h1>Fx Retailer Guide</h1>
-    <hr/>
-    <a href="https://www.fxretailer.com"><img src="../assets/images/Screenshot 2024-07-12 094759.png" height="245" alt="cat" /> </a>
-
-    <h2><a href="https://www.fxretailer.com/register">Register now</a></h2>
-    <h3><a href="./public/About me.html">About us</a></h3>
-    <h3><a href="./public/contact.html">Contact info</a></h3>
-     <h4><a href="https://www.fxretailer.com/contact">Contact us via web</a></h4>
-   </body>
+  <body>
+    <img src="./assets/images/IMG_0433.png" height="250" width="250" />
+    <ul>
+        <P>
+          <li>SUMMARY:
+            <br>A successful career of progressive strategic account management, forex trading management and bitcoin enthusiast with focus in all. Career focus in trading and mining to improve project delivery and account growth.</br>
+            <br>outside of my career, I'm developing my skills in vast interaction with clients, focusing on my personal fitness and others and I love watching baseball.</br>
+            <br>Hard work is not a punishment. Hard work is the price of admission for the opportunity to reach sustained excellence - Jay Bilas</br>
+          </li>
+        </P>
+        <hr/>                
+        <P><li>EDUCATION:
+                  <ol>
+                    <li>ABU ATO PRIMARY SCHOOL</li>
+                    <li>BRAIN TRUST SECONDARY SCHOOL</li>
+                    <li>DELTA STATE UNIVERSITY</li>
+                  </ol>
+            </li>
+        </P>
+        <hr/>
+        <p><li>WORK EXPERIENCE:
+                   <ol>
+                    <li>SELF EMPLOYED</li>
+                   </ol>
+            </li>
+        </p>
+        <hr/>
+        <p><li>SKILLS:
+                  <ol>
+                    <li>WEB DEVELOPMENT</li>
+                    <li>CODING</li>
+                  </ol>
+            </li>
+        </p>
+        <hr/>
+        <p><li>AWARDS: 
+                  <ol>
+                    <li>O' LEVEL CERTIFICATE</li>
+                    <li>BACHELOR IN SCIENCE BSC</li>
+                  </ol>
+           </li>
+    </ul>
+    <a href="./public/Hobbies.html">HOBBIES</a>
+    <p>
+    <a href="./public/Contact.html">CONTACT</a>
+    </p>
+  </body>
+  <footer>
+    <p>
+      @SKYNET
+    </p>
+  </footer>
 </html>
