--- a/index.html
+++ b/index.html
@@ -4,19 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>My Resume</title>
+    <link rel="stylesheet"
+     href="./style.css">
    </head>
   <body>
     <img src="./assets/images/IMG_0433.png" height="250" width="250" />
     <ul>
         <P>
-          <li>SUMMARY:
+          <li style="color: antiquewhite;">SUMMARY:</li>
             <br>A successful career of progressive strategic account management, forex trading management and bitcoin enthusiast with focus in all. Career focus in trading and mining to improve project delivery and account growth.</br>
             <br>outside of my career, I'm developing my skills in vast interaction with clients, focusing on my personal fitness and others and I love watching baseball.</br>
             <br>Hard work is not a punishment. Hard work is the price of admission for the opportunity to reach sustained excellence - Jay Bilas</br>
           </li>
         </P>
         <hr/>                
-        <P><li>EDUCATION:
+        <P><li style="color: azure;">EDUCATION:</li>
                   <ol>
                     <li>ABU ATO PRIMARY SCHOOL</li>
                     <li>BRAIN TRUST SECONDARY SCHOOL</li>
@@ -25,7 +27,8 @@
             </li>
         </P>
         <hr/>
-        <p><li>WORK EXPERIENCE:
+        <p>
+          <li style="color: blueviolet;">WORK EXPERIENCE:</li>
                    <ol>
                     <li>SELF EMPLOYED</li>
                    </ol>
@@ -40,16 +43,18 @@
             </li>
         </p>
         <hr/>
-        <p><li>AWARDS: 
+        <p>
+          <li style="color: azure;">AWARDS:</li> 
                   <ol>
                     <li>O' LEVEL CERTIFICATE</li>
                     <li>BACHELOR IN SCIENCE BSC</li>
                   </ol>
            </li>
+        </p>
     </ul>
-    <a href="./public/Hobbies.html">HOBBIES</a>
+    <a href="./public/Hobbies.html" style="color: rosybrown">HOBBIES</a>
     <p>
-    <a href="./public/Contact.html">CONTACT</a>
+    <a href="./public/Contact.html" style="color: beige;">CONTACT</a>
     </p>
   </body>
   <footer>
