--- a/public/Contact.html
+++ b/public/Contact.html
@@ -1,16 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contact</title>
+   <meta charset="UTF-8">
+   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+   <title>Contact</title>
+    <link rel="stylesheet" href="../style.css">
   </head>
   <body>
-    <h1>Contact Info</h1>
-    <h2>Telephone: 09065478956</h2>
-    <h2>Email: Williamrozanski97@gmail.com</h2>
-    <footer>
-      <p>@SKYNET</p>
+   <h1 style="color: antiquewhite;">Contact Info</h1>
+   <h2>Telephone: 09065478956</h2>
+   <h2>Email: Williamrozanski97@gmail.com</h2>  
+   <footer>
+      <p style="font-style: oblique; font-size: medium; color: aquamarine;">@SKYNET</p>
     </footer>
-  </body>
+        </body>
 </html>
