--- a/index.html
+++ b/index.html
@@ -8,17 +8,19 @@
      href="./style.css">
    </head>
   <body>
-    <img src="./assets/images/IMG_0433.png" height="250" width="250" />
+    <div style="background-color:#907e7e;text-align:center;padding:7px;margin-top:7px;font-size:23px;">MY RESUME</h1></div>
+    <div style="text-align: center;"><img src="./assets/images/IMG_0433.png" height="250" width="250" /></div>
     <ul>
         <P>
-          <li style="color: antiquewhite;">SUMMARY:</li>
+          <li style="color: antiquewhite;">SUMMARY:
             <br>A successful career of progressive strategic account management, forex trading management and bitcoin enthusiast with focus in all. Career focus in trading and mining to improve project delivery and account growth.</br>
             <br>outside of my career, I'm developing my skills in vast interaction with clients, focusing on my personal fitness and others and I love watching baseball.</br>
             <br>Hard work is not a punishment. Hard work is the price of admission for the opportunity to reach sustained excellence - Jay Bilas</br>
           </li>
         </P>
         <hr/>                
-        <P><li style="color: azure;">EDUCATION:</li>
+        <P>
+          <li style="color: azure;">EDUCATION:
                   <ol>
                     <li>ABU ATO PRIMARY SCHOOL</li>
                     <li>BRAIN TRUST SECONDARY SCHOOL</li>
@@ -28,38 +30,35 @@
         </P>
         <hr/>
         <p>
-          <li style="color: blueviolet;">WORK EXPERIENCE:</li>
+          <li style="color: azure;">WORK EXPERIENCE:
                    <ol>
                     <li>SELF EMPLOYED</li>
                    </ol>
             </li>
         </p>
         <hr/>
-        <p><li>SKILLS:
+        <p>
+          <li style="color: azure;">SKILLS:
                   <ol>
                     <li>WEB DEVELOPMENT</li>
                     <li>CODING</li>
                   </ol>
-            </li>
+          </li>
         </p>
         <hr/>
         <p>
-          <li style="color: azure;">AWARDS:</li> 
+          <li style="color: azure;">AWARDS:
                   <ol>
                     <li>O' LEVEL CERTIFICATE</li>
-                    <li>BACHELOR IN SCIENCE BSC</li>
+                    <li>BACHELOR IN SCIENCE (BSC)</li>
                   </ol>
            </li>
         </p>
     </ul>
-    <a href="./public/Hobbies.html" style="color: rosybrown">HOBBIES</a>
+    <a href="./public/Hobbies.html" style="color: beige">HOBBIES</a>
     <p>
     <a href="./public/Contact.html" style="color: beige;">CONTACT</a>
     </p>
+    <div style="text-align: center; background-color: aliceblue; font-size: 15px; margin-top: 10px; padding: 7px;">Copyright @ SKYNET</div>
   </body>
-  <footer>
-    <p>
-      @SKYNET
-    </p>
-  </footer>
 </html>
