--- a/public/Contact.html
+++ b/public/Contact.html
@@ -1,17 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-   <meta charset="UTF-8">
-   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>Contact</title>
-    <link rel="stylesheet" href="../style.css">
-  </head>
-  <body>
-   <h1 style="color: antiquewhite;">Contact Info</h1>
-   <h2>Telephone: 09065478956</h2>
-   <h2>Email: Williamrozanski97@gmail.com</h2>  
-    <footer>
-      <p style="font-style: oblique; font-size: medium; color: aquamarine;">@SKYNET</p>
-    </footer>
-  </body>
-</html>
+<link rel="stylesheet" href="../H.style.css">
+<body>
+   <h1 style="padding: 10px;">Contact Info</h1>
+   <hr/>
+   <div style="background-color:#f1f1f1;text-align:center;padding:10px;margin-top:7px;font-size:12px;"> <h2>Telephone: 09065478956.</h2>
+   <h2>Email: Williamrozanski97@gmail.com</h2>
+   </h2>
+</body>
+
+
