--- a/public/Hobbies.html
+++ b/public/Hobbies.html
@@ -1,22 +1,13 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <title>Hobbies</title>
-      <link rel="stylesheet" href="../H.style.css">
-  </head>
-   <body>
-     <h1>Hobbies</h1>
-     <h4><ul>
-            <li>READING</li>
-            <li">CODING</li>
-            <li>EXERCISE</li>
-            <li>HIKING</li>
-            <li>CAMPING</li>
-        </ul>
-     </h2>
-  </body>
-  <footer>
-    <p>@SKYNET</p>
-  </footer>
-</html>
+<link rel="stylesheet" href="../H.style.css">
+
+ <div style="text-align: center; background-color: rgb(228, 181, 119); margin-top: 10px; padding: 7px; font-size: 40px; font-style: oblique;"<h1>Hobbies</h1></div>
+<h2>
+  <ul>
+    <p><li>READING</li></p>
+    <P><li>CODING</li></P>
+    <p><li>EXERCISE</li></p>
+    <p><li>HIKING</li></p>
+    <p><li>CAMPING</li></p>
+  </ul>
+</h2>
+
